--- a/dockerfiles/cassandra/files/supervisord.conf
+++ b/dockerfiles/cassandra/files/supervisord.conf
@@ -12,13 +12,13 @@ stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
 
 [program:consul]
-command=/usr/local/bin/consul agent -join=core -data-dir /tmp/consul -config-dir /etc/consul.d
+command=/bin/bash /usr/local/bin/startConsul.sh
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
 
 [program:cassandra]
-command=/usr/sbin/cassandra -f start
+command=/bin/bash /usr/local/bin/startCassandra.sh
 
 [program:datastax-agent]
 command=/usr/share/datastax-agent/bin/datastax-agent -f
