--- a/dockerfiles/node/files/supervisord.conf
+++ b/dockerfiles/node/files/supervisord.conf
@@ -6,7 +6,7 @@ command=/usr/sbin/rsyslogd -n
 autorestart=true
 
 [program:consul]
-command=/usr/local/bin/consul agent -join=core -data-dir /tmp/consul -config-dir /etc/consul.d
+command=/bin/bash /usr/local/bin/startConsul.sh
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
