--- a/dockerfiles/opscenter/files/supervisord.conf
+++ b/dockerfiles/opscenter/files/supervisord.conf
@@ -12,7 +12,7 @@ stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
 
 [program:consul]
-command=/usr/local/bin/consul agent -join=core -data-dir /tmp/consul -config-dir /etc/consul.d
+command=/bin/bash /usr/local/bin/startConsul.sh
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
