--- a/vagrant/ubuntu_docker/Vagrantfile
+++ b/vagrant/ubuntu_docker/Vagrantfile
@@ -8,11 +8,18 @@ TIMEZONE = "Europe/Helsinki"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Every Vagrant virtual environment requires a box to build off of.
   config.vm.box = "ubuntu/trusty64"
-  config.vm.hostname = "vagrant-docker"
+
+  config.vm.define "node1", primary: true do |node1|
+    node1.vm.network :private_network, ip: "10.10.10.30"
+    node1.vm.hostname = "node1"
+  end
+  config.vm.define "node2", autostart: false do |node2|
+    node2.vm.network :private_network, ip: "10.10.10.40"
+    node2.vm.hostname = "node2"
+  end
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  config.vm.network :private_network, ip: "10.10.10.30"
 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
