--- a/dockerfiles/core/files/supervisord.conf
+++ b/dockerfiles/core/files/supervisord.conf
@@ -16,7 +16,7 @@ stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 
 [program:nginx]
-command=/usr/sbin/nginx -c /etc/nginx/nginx.conf
+command=/bin/bash /usr/local/bin/startNginx.sh
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 
