Tweaked the snitch for Cassandra for better discovery between nodes.

--- a/dockerfiles/cassandra/files/cassandra.yaml
+++ b/dockerfiles/cassandra/files/cassandra.yaml
@@ -224,7 +224,7 @@ seed_provider:
       parameters:
           # seeds is actually a comma-delimited list of addresses.
           # Ex: "<ip1>,<ip2>,<ip3>"
-          - seeds: "cassandra1.node.west.consul,cassandra1.node.consul, cassandra.service.west.consul, cassandra.service.consul"
+          - seeds: "cassandra1.node.west.consul,cassandra4.node.east.consul"
 
 # For workloads with more data than can fit in memory, Cassandra's
 # bottleneck will be reads that need to fetch data from
@@ -558,7 +558,7 @@ cross_node_timeout: false
 #
 # You can use a custom Snitch by setting this to the full class name
 # of the snitch, which will be assumed to be on your classpath.
-endpoint_snitch: SimpleSnitch
+endpoint_snitch: GossipingPropertyFileSnitch
 
 # controls how often to perform the more expensive part of host score
 # calculation
