Cleaned the project and added README files.

--- a/vagrant/ubuntu_docker/provisioning/playbook.yml
+++ b/vagrant/ubuntu_docker/provisioning/playbook.yml
@@ -30,11 +30,13 @@
       apt: pkg=nodejs
     - name: modify docker startup command
       lineinfile: dest=/etc/default/docker regexp="^#DOCKER_OPTS=" line='DOCKER_OPTS="-H tcp://{{ ansible_eth1.ipv4.address }}:4243 -H unix:///var/run/docker.sock"'
-    - name: restart docker service
-      service: name=docker state=restarted
+      notify: restart docker
     - name: install maestro-ng
       pip: name='git+git://github.com/sirile/maestro-ng#egg=maestro'
     - name: install weave
       get_url: url=https://raw.githubusercontent.com/zettio/weave/master/weaver/weave dest=/usr/local/bin/weave mode=0111
     - name: add local docker-registry to hosts-file
       lineinfile: dest=/etc/hosts line="10.10.10.100  registry.local"
+  handlers:
+    - name: restart docker
+      service: name=docker state=restarted
