--- a/dockerfiles/opscenter/Dockerfile
+++ b/dockerfiles/opscenter/Dockerfile
@@ -2,6 +2,12 @@
 FROM sirile/oraclejre:0.8
 MAINTAINER Ilkka Anttonen
 
+# Expose the ports
+EXPOSE 8888 22 61620
+
+# Start the supervisord
+CMD ["/usr/bin/supervisord"]
+
 # Add the repository for Cassandra
 RUN echo "deb http://debian.datastax.com/community stable main" > /etc/apt/sources.list.d/datastax.list
 RUN curl -L http://debian.datastax.com/debian/repo_key | apt-key add -
@@ -27,8 +33,5 @@ ADD files/opscenter-consul.json /etc/consul.d/opscenter-consul.json
 RUN mkdir /etc/opscenter/clusters
 ADD files/Test_Cluster.conf /etc/opscenter/clusters/Test_Cluster.conf
 
-# Expose the ports
-EXPOSE 8888 22 61620
-
-# Start the supervisord
-CMD ["/usr/bin/supervisord"]
+# Clean up APT when done.
+RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
