Multiline logging support implemented. Updated rsyslog.conf files accordingly. Updated ElasticSearch to 1.3.4. Updated Kibana to 3.1.1. Updated ConsulUI to 4.1.0.

--- a/dockerfiles/cassandra/files/rsyslog.conf
+++ b/dockerfiles/cassandra/files/rsyslog.conf
@@ -1,27 +1,34 @@
-$ModLoad imuxsock # for reading local syslog messages
-$ModLoad imfile   # Load the imfile input module
+# Load the modules
+module(load="imuxsock")
+module(load="imfile")
 
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 $ActionResumeInterval 1
 $ActionResumeRetryCount -1
 
 # Cassandra log
-$InputFileName /var/log/cassandra/system.log
-$InputFileTag cassandra:
-$InputFileStateFile state-cassandra
-$InputRunFileMonitor
+input(type="imfile"
+      File="/var/log/cassandra/system.log"
+      Tag="cassandra:"
+      StateFile="state-cassandra"
+      ReadMode="2"
+)
 
 # Datastax-agent log
-$InputFileName /var/log/datastax-agent/agent.log
-$InputFileTag datastax-agent:
-$InputFileStateFile state-datastax-agent
-$InputRunFileMonitor
+input(type="imfile"
+      File="/var/log/datastax-agent/agent.log"
+      Tag="datastax-agent:"
+      StateFile="state-datastax.agent"
+      ReadMode="2"
+)
 
 # Consul log
-$InputFileName /var/log/supervisor/consul.log
-$InputFileTag consul:
-$InputFileStateFile state-consul
-$InputRunFileMonitor
+input(type="imfile"
+      File="/var/log/supervisor/consul.log"
+      Tag="consul:"
+      StateFile="state-consul"
+      ReadMode="2"
+)
 
 # Send everything to a logstash server named 'log.service.consul' on port 5000:
 *.*                             @@log.service.consul:5000
