--- a/dockerfiles/template/files/rsyslog.conf
+++ b/dockerfiles/template/files/rsyslog.conf
@@ -1,15 +1,18 @@
-$ModLoad imuxsock # for reading local syslog messages
-$ModLoad imfile   # Load the imfile input module
+# Load the modules
+module(load="imuxsock")
+module(load="imfile")
 
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 $ActionResumeInterval 1
 $ActionResumeRetryCount -1
 
 # Consul log
-$InputFileName /var/log/supervisor/consul.log
-$InputFileTag consul:
-$InputFileStateFile state-consul
-$InputRunFileMonitor
+input(type="imfile"
+      File="/var/log/supervisor/consul.log"
+      Tag="consul:"
+      StateFile="state-consul"
+      ReadMode="2"
+)
 
 # Send everything to a logstash server named 'log.service.consul' on port 5000:
 *.*                             @@log.service.consul:5000
