Fixed a typo and updated TODO with known issues

--- a/dockerfiles/cassandra/files/rsyslog.conf
+++ b/dockerfiles/cassandra/files/rsyslog.conf
@@ -18,7 +18,7 @@ input(type="imfile"
 input(type="imfile"
       File="/var/log/datastax-agent/agent.log"
       Tag="datastax-agent:"
-      StateFile="state-datastax.agent"
+      StateFile="state-datastax-agent"
       ReadMode="2"
 )
 
