--- a/maestro/cassandra.yaml
+++ b/maestro/cassandra.yaml
@@ -1,3 +1,6 @@
+__maestro:
+  schema: 2
+
 name: cassandra
 
 ships:
@@ -15,7 +18,7 @@ services:
           /etc/timezone: /etc/timezone
         lifecycle:
           running: [{type: tcp, port: consului}]
-        dns: localhost
+        dns: [localhost]
   opscenter:
     image: registry.local/opscenter:latest
     requires: [core]
@@ -30,7 +33,7 @@ services:
           /etc/timezone: /etc/timezone
         lifecycle:
           running: [{type: tcp, port: agent}]
-        dns: localhost
+        dns: [localhost]
   cassandra:
     image: registry.local/cassandra:latest
     requires: [core]
@@ -45,7 +48,7 @@ services:
           /etc/timezone: /etc/timezone
         lifecycle:
           running: [{type: tcp, port: agent}]
-        dns: localhost
+        dns: [localhost]
       cassandra2:
         ship: vagrant-docker
         ports: {ssh: '22:1022', agent: "61621:61622"}
@@ -56,7 +59,7 @@ services:
           /etc/timezone: /etc/timezone
         lifecycle:
           running: [{type: tcp, port: agent}]
-        dns: localhost
+        dns: [localhost]
       cassandra3:
         ship: vagrant-docker
         ports: {ssh: '22:1023', agent: "61621:61623"}
@@ -67,7 +70,7 @@ services:
           /etc/timezone: /etc/timezone
         lifecycle:
           running: [{type: tcp, port: agent}]
-        dns: localhost
+        dns: [localhost]
   node:
     image: registry.local/node:latest
     requires: [core]
@@ -83,4 +86,4 @@ services:
           /root/Projects: /home/vagrant/Projects
         lifecycle:
           running: [{type: tcp, port: ssh}]
-        dns: localhost
+        dns: [localhost]
