--- a/vagrant/ubuntu_docker/provisioning/playbook.yml
+++ b/vagrant/ubuntu_docker/provisioning/playbook.yml
@@ -34,7 +34,7 @@
     - name: ensure that user vagrant is in docker group
       user: name=vagrant append=yes groups=docker
     - name: install maestro-ng
-      pip: name='git+http://github.com/sirile/maestro-ng#egg=maestro'
+      pip: name='git+http://github.com/signalfuse/maestro-ng#egg=maestro'
     - name: install weave
       get_url: url=https://raw.githubusercontent.com/zettio/weave/master/weave dest=/usr/local/bin/weave mode=0111 validate_certs=no
     - name: add local docker-registry to hosts-file
